--- a/client/app/pgm/provider_landing/index.html
+++ b/client/app/pgm/provider_landing/index.html
@@ -21,7 +21,7 @@
         <!-- Custom styles for this template -->
         <link href="/css/homeostyle.css" rel="stylesheet">
 
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+        <script src="/bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
@@ -63,7 +63,7 @@
           <div class="jumbotron">
               <h1>Remote On-call Homeopathy</h1>
               <p class="lead">Doctor Consultation from Anywhere. Save time. Enjoy convenience of seeing doctor remotely. No unnecessary physical visit.</p>
-              <p><a class="btn btn-lg btn-success" href="/provider/provider_index.html" role="button">Coming Soon</a>
+              <p><a class="btn btn-lg btn-success" href="/provider/provider_index.html" role="button">Log In</a>
               </p>
               <!-- <div class="well" ng-app="landingApp" ng-controller="SubscribeCtrl">
                 <form class="form-inline">
@@ -118,17 +118,13 @@
       </div><!-- /container -->
 
 
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+        
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="bower_components/html5-boilerplate/js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="/bower_components/jquery/dist/jquery.min.js"><\/script>')</script>
         <script src="/bower_components/html5-boilerplate/js/plugins.js"></script>
         <script src="/bower_components/html5-boilerplate/js/main.js"></script>
-        <script src="/bower_components/angular/angular.js"></script>
-        <script src="/bower_components/angular-route/angular-route.js"></script>
-        <script src="/bower_components/angular-resource/angular-resource.js"></script>
-        <script src="subs.js"></script>
+        
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
