--- a/client/app/user/index.html
+++ b/client/app/user/index.html
@@ -20,7 +20,7 @@
     <title>Doctor On-Call : Find</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="provider.css" rel="stylesheet">
@@ -87,20 +87,22 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
     -->
 
-    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="/bower_components/jquery-ui/ui/jquery-ui.js"></script>
-    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/bower_components/angular/angular.js"></script>
-    <script src="/bower_components/angular-route/angular-route.js"></script>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    <script src="/bower_components/angular-route/angular-route.min.js"></script>
     <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="/bower_components/angular-resource/angular-resource.js"></script>
+    <script src="/bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="/bower_components/angular-cookie/angular-cookie.min.js"></script>
 
     <script src="/bower_components/holderjs/holder.js"></script>
 
+    <!--
     <script type="text/javascript" src="/bower_components/angular-ui-calendar/src/calendar.js"></script>
     <script type="text/javascript" src="/bower_components/fullcalendar/fullcalendar.js"></script>
-    <script type="text/javascript" src="/bower_components/fullcalendar/gcal.js"></script>
+    <script type="text/javascript" src="/bower_components/fullcalendar/gcal.js"></script> -->
     <script src="/components/version/version.js"></script>
     <script src="/components/version/version-directive.js"></script>
     <script src="/components/version/interpolate-filter.js"></script>
