fixed user login as provider

--- a/client/app/provider/provider_index.html
+++ b/client/app/provider/provider_index.html
@@ -62,9 +62,9 @@
                             <li><a href ng-click="logout()">Logout</a>
                             </li>
                         </ul>
-                        <form class="navbar-form navbar-right">
+                        <!-- <form class="navbar-form navbar-right">
                             <input type="text" class="form-control" placeholder="Search for your Doctor">
-                        </form>
+                        </form> -->
                     </div>
                 </div>
             </nav>
