--- a/client/app/pgm/default_landing/index.html
+++ b/client/app/pgm/default_landing/index.html
@@ -38,11 +38,11 @@
                 <a class="navbar-brand" href="#">Doctors on Call</a>
               </div>
               <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav pull-right">
+                <!-- <ul class="nav navbar-nav pull-right">
                   <li class="active"><a href="#">Register</a></li>
                   <li><a href="#about">Login</a></li>
                   <li><a href="#contact">Contact</a></li>
-                </ul>
+                </ul> -->
               </div>
             </div>
           </nav>
