Modified User to patient

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -75,7 +75,7 @@
                   <button type="submit" class="btn btn-primary" ng-click="doSubscribe(true)">Subscribe as Doctor</button>
                   <div class="alert alert-success" role="alert" ng-if="subscriptionStatus">{{subscriptionStatus}}</div>
                 </form> -->
-                <a class="btn btn-primary" href="/pgm/default_landing/index.html">User</a>
+                <a class="btn btn-primary" href="/pgm/default_landing/index.html">Patient</a>
                 <span>    </span>
                 <a class="btn btn-success" href="/pgm/provider_landing/index.html">Doctor</a>
 
