--- a/client/app/user/index.html
+++ b/client/app/user/index.html
@@ -62,9 +62,9 @@
                             <li><a href ng-click="logout()">Logout</a>
                             </li>
                         </ul>
-                        <form class="navbar-form navbar-right">
+                        <!-- <form class="navbar-form navbar-right">
                             <input type="text" class="form-control" placeholder="Search for your Doctor">
-                        </form>
+                        </form> -->
                     </div>
                 </div>
             </nav>
@@ -92,6 +92,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.1.2/angular-strap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.1.2/angular-strap.tpl.min.js"></script>
     <script src="/bower_components/angular-route/angular-route.min.js"></script>
     <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="/bower_components/angular-resource/angular-resource.min.js"></script>
