--- a/client/app/provider/provider_index.html
+++ b/client/app/provider/provider_index.html
@@ -92,16 +92,16 @@
     <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="/bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="/bower_components/angular-cookie/angular-cookie.min.js"></script>
-    <script src="/bower_components/moment/min/moment-with-locales.min.js"></script>
+    <!--<script src="/bower_components/moment/min/moment-with-locales.min.js"></script>-->
 
  <!--    
     <script src="/bower_components/angular-bootstrap-calendar/dist/js/angular-bootstrap-calendar-tpls.min.js"></script>
 
- -->
+ 
     <script type="text/javascript" src="/bower_components/angular-ui-calendar/src/calendar.js"></script>
     <script type="text/javascript" src="/bower_components/fullcalendar/fullcalendar.js"></script>
     <script type="text/javascript" src="/bower_components/fullcalendar/gcal.js"></script> 
-
+-->
     <script src="/bower_components/holderjs/holder.js"></script>
     <script src="/components/services/hmpservices.js"></script>
     <script src="/components/version/version.js"></script>
