--- a/client/app/provider/session/login.html
+++ b/client/app/provider/session/login.html
@@ -1,7 +1,11 @@
-<hr/>
+
 <div class="row">
+
   <div class="col-lg-3"></div>
+
   <div class="col-lg-6" ng-controller="SessionCtrl">
+      <h2>Login</h2>
+      <hr/>
       <form ng-submit="login(givenEmail,givenPassword)">
         <div class="form-group">
           <label for="inputEmail">Email address</label>
