minor change in provider landing page

--- a/client/app/pgm/provider_landing/index.html
+++ b/client/app/pgm/provider_landing/index.html
@@ -65,7 +65,7 @@
               <p class="lead">Provide Consultation from Anywhere. Save Time. Help More Patients.</p>
               <p><a class="btn btn-lg btn-success" href="/provider/provider_index.html" role="button">Log In</a>
               </p>
-              <p><a href="/provider/provider_index.html?interest=yes" role="button">Contact us create an account</a>
+              <p><a href="/provider/provider_index.html?interest=yes" role="button"><small>Contact us create an account</small></a>
               <!-- <div class="well" ng-app="landingApp" ng-controller="SubscribeCtrl">
                 <form class="form-inline">
                   <div class="form-group">
