linked images on the user main page

--- a/client/app/pgm/default_landing/index.html
+++ b/client/app/pgm/default_landing/index.html
@@ -35,13 +35,14 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">Remedy (minus) Time</a>
+                        <a class="navbar-brand" href="#">Remedy7</a>
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav pull-right">
+                            <li><a href="/user/index.html#/user/login">Ready to Start?</a></li>
                             <li><a href="/user/index.html#/user/help">FAQ</a></li>
                             <li><a href="#contact">Contact</a></li>
-                            <li class="active"><a href="/pgm/provider_landing/index.html">Interested to join as Doctor?</a></li>
+                            <li><a href="/pgm/provider_landing/index.html">Start as Doctor?</a></li>
                         </ul>
                     </div>
                 </div>
@@ -128,12 +129,13 @@
                 <div class="media">
                     <div class="media-left img-circle">
                         <a href="#">
-                            <img class="media-object" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 120px; height: 120px;">
+                            <img class="media-object" src="/img/ulanding_setup_appt.png" alt="Generic placeholder image" style="width: 120px; height: 120px;">
                         </a>
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading">1. Setup online appointment</h4>
                         <p>Find your doctor, see his timings and set up an appointment.</p>
+                        <a class="btn btn-primary" href="#" role="button">Start &raquo;</a>
                     </div>
                 </div>
             </div>
@@ -146,12 +148,13 @@
                 <div class="media">
                     <div class="media-left img-circle">
                         <a href="#">
-                            <img class="media-object" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 120px; height: 120px;">
+                            <img class="media-object" src="/img/ulanding_make_payment.jpg" alt="Generic placeholder image" style="width: 120px; height: 120px;">
                         </a>
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading">2. Make Payment</h4>
                         <p>Pay by Credit or Debit Card</p>
+                        <p><a class="btn btn-primary" href="#" role="button">Start &raquo;</a></p>
                     </div>
                 </div>
             </div>
@@ -164,12 +167,13 @@
                 <div class="media">
                     <div class="media-left img-circle">
                         <a href="#">
-                            <img class="media-object" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 120px; height: 120px;">
+                            <img class="media-object" src="/img/ulanding_doc_will_contact.jpg" alt="Generic placeholder image" style="width: 120px; height: 120px;">
                         </a>
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading">3. Doctor will contact you</h4>
                         <p>Doctor will make video or phone call to you</p>
+                        <p><a class="btn btn-primary" href="#" role="button">Start &raquo;</a></p>
                     </div>
                 </div>
             </div>
@@ -182,12 +186,13 @@
                 <div class="media">
                     <div class="media-left img-circle">
                         <a href="#">
-                            <img class="media-object" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 120px; height: 120px;">
+                            <img class="media-object" src="/img/ulanding_delvrd_to_home.png" alt="Generic placeholder image" style="width: 120px; height: 120px;">
                         </a>
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading">4. Medicine delivered to home</h4>
                         <p>Get your medicine at home</p>
+                        <p><a class="btn btn-primary" href="#" role="button">Start &raquo;</a></p>
                     </div>
                 </div>
             </div>
@@ -203,7 +208,8 @@
                 <p class="lead">You trust your doctor. Not just setup an appointment but see your doctor online.</p>
             </div>
             <div class="col-md-5">
-                <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image"/>
+                <!-- <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image"/> -->
+                <img class="featurette-image img-responsive" src="/img/ulanding_video_consult.jpg" alt="Generic placeholder image"/>
             </div>
         </div>
         <hr class="featurette-divider">
@@ -214,7 +220,7 @@
                 <p class="lead">You trust your doctor. Not just setup an appointment but see your doctor online.</p>
             </div>
             <div class="col-md-5">
-                <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image"/>
+                <img class="featurette-image img-responsive" src="/img/ulanding_phone_consult.jpg" alt="Generic placeholder image"/>
             </div>
         </div>
         <hr class="featurette-divider">
@@ -225,7 +231,7 @@
                 <p class="lead">You trust your doctor. Not just setup an appointment but see your doctor online.</p>
             </div>
             <div class="col-md-5">
-                <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image"/>
+                <img class="featurette-image img-responsive" src="/img/ulanding_email_consult.png" alt="Generic placeholder image"/>
             </div>
         </div>
         <hr class="featurette-divider">
@@ -235,13 +241,13 @@
                 <p class="lead">You trust your doctor. Not just setup an appointment but see your doctor online.</p>
             </div>
             <div class="col-md-5">
-                <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image"/>
+                <img class="featurette-image img-responsive" src="/img/ulanding_exclu_homeo.png" alt="Generic placeholder image"/>
             </div>
         </div>
         <hr class="featurette-divider">
         <div class="row featurette">
             <div class="col-md-5">
-                <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image"/>
+                <img class="featurette-image img-responsive" src="/img/ulanding_unified_prescri.png" alt="Generic placeholder image"/>
             </div>
             <div class="col-md-7">
                 <h2 class="featurette-heading">One Place for all your prescriptions <span class="text-muted"></span></h2>
@@ -252,10 +258,10 @@
         <div class="row featurette">
             <div class="col-md-7">
                 <h2 class="featurette-heading">Convenient for you and Doctor both <span class="text-muted"></span></h2>
-                <p class="lead">See your doctor at your convenient time. Works on Computer, Tablet and Smartphone</p>
+                <p class="lead">No driving. No parking hassle</p>
             </div>
             <div class="col-md-5">
-                <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image"/>
+                <img class="featurette-image img-responsive" src="/img/ulanding_convenient.png" alt="Generic placeholder image"/>
             </div>
         </div>
         <hr class="featurette-divider">
@@ -263,7 +269,9 @@
         <!-- FOOTER -->
         <footer>
             <p class="pull-right"><a href="#">Back to top</a></p>
-            <p>&copy; M/P Labs, 2015 &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+            <p>&copy; M/P Labs, 2015 &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a>
+                &middot; <a href="/pgm/provider_landing/index.html"> Doctors Site</a>
+            </p>
         </footer>
     </div>
     <!-- /.container -->
