--- a/client/static/index.html
+++ b/client/static/index.html
@@ -61,8 +61,8 @@
 
           <!-- Jumbotron -->
           <div class="jumbotron">
-              <h1>Remote On-call Homeopathy</h1>
-              <p class="lead">Doctor Consultation from Anywhere. Save time. Enjoy convenience of seeing doctor remotely. No unnecessary physical visit.</p>
+              <h1>Remedy7</h1>
+              <p class="lead">Homeopathy Consultation from Anywhere. Save time. Enjoy convenience of seeing doctor remotely. No unnecessary physical visit.</p>
               <p><a class="btn btn-lg btn-success" href="#" role="button">Get started now</a>
               </p>
           </div>
