doctor and user landing page changes

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -61,11 +61,11 @@
 
           <!-- Jumbotron -->
           <div class="jumbotron">
-              <h1>Remote On-call Homeopathy</h1>
+              <h1>Remedy7</h1>
               <p class="lead">Doctor Consultation from Anywhere. Save time. Enjoy convenience of seeing doctor remotely. No unnecessary physical visit.</p>
               <!-- <p><a class="btn btn-lg btn-success" href="provider/provider_index.html" role="button">Coming Soon</a>
               </p> -->
-              <div class="well">
+              <div class="alert alert-warning">
                 <!-- <form class="form-inline">
                   <div class="form-group">
                     <label class="sr-only" for="emailInput">Email address</label>
@@ -75,7 +75,7 @@
                   <button type="submit" class="btn btn-primary" ng-click="doSubscribe(true)">Subscribe as Doctor</button>
                   <div class="alert alert-success" role="alert" ng-if="subscriptionStatus">{{subscriptionStatus}}</div>
                 </form> -->
-                <a class="btn btn-primary" href="/pgm/default_landing/index.html">Patient</a>
+                <a class="btn btn-warning" href="/pgm/default_landing/index.html">Patient</a>
                 <span>    </span>
                 <a class="btn btn-success" href="/pgm/provider_landing/index.html">Doctor</a>
 
@@ -83,7 +83,7 @@
           </div>
 
           <!-- Example row of columns -->
-          <div class="row">
+          <!-- <div class="row">
 
               <div class="col-lg-4">
                   <h2>Simple</h2>
@@ -113,11 +113,11 @@
               
               
           </div>
-
+ -->
           <!-- Site footer -->
-          <footer class="footer">
+          <!-- <footer class="footer">
               <p>&copy; M/P 2015</p>
-          </footer>
+          </footer> -->
 
       </div><!-- /container -->
 
