--- a/client/app/user/index.html
+++ b/client/app/user/index.html
@@ -41,7 +41,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="/pgm/default_landing/index.html">Doctor On-Call</a>
+                        <a class="navbar-brand" href="/pgm/default_landing/index.html">Remedy7</a>
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav navbar-right" ng-if="!authFlag">
@@ -49,16 +49,12 @@
                             </li>
                             <li><a href="#/user/login">Login</a>
                             </li>
-                            <li><a href="#/setting">Contact</a>
-                            </li>
+                            
                         </ul>
                         <ul class="nav navbar-nav navbar-right" ng-if="authFlag">
                             <li><a href="#/dashboard">{{userName}}</span></a>
                             </li>
-                            <li><a href="#/profile">Profile</a>
-                            </li>
-                            <li><a href="#/setting">Help</a>
-                            </li>
+                            
                             <li><a href ng-click="logout()">Logout</a>
                             </li>
                         </ul>
