added discard unfinishes appt and other minor changes

--- a/client/app/pgm/default_landing/index.html
+++ b/client/app/pgm/default_landing/index.html
@@ -40,7 +40,7 @@
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav pull-right">
                             <li><a href="/user/index.html#/user/login">
-                                <button class="btn btn-success" type="button">Ready to start?</button></a></li>
+                                <button class="btn btn-success" type="button">Login / Register</button></a></li>
                             <li><a href="/user/index.html#/user/help">FAQ</a></li>
                             <!-- <li><a href="/pgm/provider_landing/index.html">Are you Doctor?</a></li> -->
                         </ul>
@@ -117,6 +117,7 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
+    <div><h1 class="text-center"><u>How it works</u></h1><br/></div>
     <!-- /.carousel -->
     <!-- Marketing messaging and featurettes
       ================================================== -->
@@ -136,9 +137,12 @@
                         </a>
                     </div>
                     <div class="media-body">
-                        <h4 class="media-heading">1. Setup online appointment</h4>
-                        <p>Find your doctor and set up an appointment by chosing video, phone or email consultation</p>
-                        <!-- <a class="btn btn-primary" href="#" role="button">Start &raquo;</a> -->
+                        
+                                <h4 class="media-heading">1. Setup online appointment</h4>
+                                <p>Find your doctor and set up an appointment by chosing video, phone or email consultation</p>
+                                <a class="btn btn-primary" href="/user/index.html" role="button">Start &raquo;</a>
+                                <!-- <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> -->
+                            
                     </div>
                 </div>
             </div>
