--- a/client/app/pgm/provider_landing/index.html
+++ b/client/app/pgm/provider_landing/index.html
@@ -65,7 +65,7 @@
               <p class="lead">Provide Consultation from Anywhere. Save Time. Help More Patients.</p>
               <p><a class="btn btn-lg btn-success" href="/provider/provider_index.html" role="button">Log In</a>
               </p>
-              <p><a href="/provider/provider_index.html?interest=yes" role="button"><small>Contact us create an account</small></a>
+              <p><a href="/provider/provider_index.html?interest=yes" role="button"><small>Contact us to create an account or register</small></a>
               <!-- <div class="well" ng-app="landingApp" ng-controller="SubscribeCtrl">
                 <form class="form-inline">
                   <div class="form-group">
@@ -92,9 +92,7 @@
               </div>
               <div class="col-lg-4">
                   <h2>Flexible</h2>
-                  <p>Call when you are free. At the appointment time, patient would be waiting but they
-                    cannot make call to you. You will make call to them when you are ready. Of course,
-                    please honor the appointment time as much as you can.</p>
+                  <p>We understand sometimes helping a patient can delay the consultation of next waiting patient, so keeping an exaxt appointment time is not always possible. Remedy7 platform is flexible. At the appointment time, patient would be waiting. Call when you are ready.</p>
                   
               </div>
               <div class="col-lg-4">
