--- a/client/app/provider/croom/croom.html
+++ b/client/app/provider/croom/croom.html
@@ -1,6 +1,6 @@
 <div ng-controller="CRoomCtrl">
     <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
+        <!-- <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
                 <li class="active"><a href="#">Waiting Room Queue <span class="sr-only">(current)</span></a>
                 </li>
@@ -12,9 +12,10 @@
                 </li>
             </ul>
             
-        </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1 class="page-header">{{patientDesc}}</h1>
+        </div> -->
+        <!-- <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main"> -->
+        <div class="col-sm-12 main">    
+            <h1 class="page-header">Patient - {{patientDesc}}</h1>
 
             <div class="row placeholders">
                 
@@ -43,7 +44,7 @@
                     </div>
                   </div>
                   <div class="panel-footer">
-                    <button class="btn btn-primary" type="submit" ng-click="callUser()">Call Patient A</button>
+                    <button class="btn btn-primary" type="submit" ng-click="callUser()">Call This Patient</button>
                     <button class="btn btn-danger" type="submit" ng-click="stopCall()">Disconnect Call</button>
                   </div>
                 </div>
