--- a/client/app/provider/provider_index.html
+++ b/client/app/provider/provider_index.html
@@ -39,7 +39,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="/pgm/provider_landing/index.html">Doctor On-Call</a>
+                        <a class="navbar-brand" href="/pgm/provider_landing/index.html">Remedy7</a>
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav navbar-right" ng-if="!authFlag">
