filter implementations for past and future appts

--- a/client/app/pgm/provider_landing/index.html
+++ b/client/app/pgm/provider_landing/index.html
@@ -62,7 +62,7 @@
           <!-- Jumbotron -->
           <div class="jumbotron">
               <h1>Remedy7</h1>
-              <p class="lead">Provide Consultation from Anywhere. Save Time. Help More Patients.</p>
+              <p class="lead">Provide Consultation from Anywhere. Utilize Time. Help More Patients.</p>
               <p><a class="btn btn-lg btn-success" href="/provider/provider_index.html" role="button">Log In</a>
               </p>
               <p><a href="/provider/provider_index.html?interest=yes" role="button"><small>Contact us to create an account or register</small></a>
@@ -92,7 +92,7 @@
               </div>
               <div class="col-lg-4">
                   <h2>Flexible</h2>
-                  <p>We understand sometimes helping a patient can delay the consultation of next waiting patient, so keeping an exaxt appointment time is not always possible. Remedy7 platform is flexible. At the appointment time, patient would be waiting. Call when you are ready.</p>
+                  <p>We understand sometimes helping a patient can delay the consultation of next waiting patient, so keeping an exaxt appointment time is not always possible. Remedy7 platform is flexible. </p>
                   
               </div>
               <div class="col-lg-4">
