--- a/client/app/provider/dashboard/todayappt_view.html
+++ b/client/app/provider/dashboard/todayappt_view.html
@@ -11,7 +11,7 @@
                     <button type="button" class="btn btn-primary" ng-click="gotoCRoom(appt)">Room</button>
                 </div>
             </div> -->
-        <div class="media" ng-repeat="appt in apptList">
+        <div class="media" ng-repeat="appt in todaysApptList">
             <div class="media-left">
                 <a href="#">
                     <img my-holder="holder.js/80x80/auto/sky" class="media-object" alt="Patient">
