--- a/client/app/provider/provider_index.html
+++ b/client/app/provider/provider_index.html
@@ -18,6 +18,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <!-- Custom styles for this template -->
     <link href="/css/provider.css" rel="stylesheet">
@@ -92,6 +93,7 @@
     <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="/bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="/bower_components/angular-cookie/angular-cookie.min.js"></script>
+    <script src="/bower_components/moment/moment.js"></script>
     <!--<script src="/bower_components/moment/min/moment-with-locales.min.js"></script>-->
 
  <!--    
