--- a/client/app/user/index.html
+++ b/client/app/user/index.html
@@ -33,8 +33,8 @@
 <body>
     <div ng-controller="MenuContainerCtrl">
         <div>
-            <nav class="navbar navbar-inverse navbar-fixed-top">
-                <div class="container-fluid">
+            <nav class="navbar navbar-fixed-top">
+                <div class="container-fluid r7navbar">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                             <span class="sr-only">Toggle navigation</span>
