--- a/client/app/provider/provider_index.html
+++ b/client/app/provider/provider_index.html
@@ -56,12 +56,22 @@
                             </li>
                             <!-- <li><a ui-sref="provider_calendar">Calendar</a>
                             </li> -->
-                            <!-- <li><a href="#/setting">Payments</a>
-                            </li> -->
                             <li><a ui-sref="feedback">Contact</a>
                             </li>
-                            <li><a href ng-click="logout()">Logout</a>
+                            <li class="dropdown">
+                              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
+                              <ul class="dropdown-menu">
+                                <!-- <li><a href="#">Earnings/Payments</a></li>
+                                <li><a href="#">Change Profile</a></li>
+                                <li><a href="#">Change Pre-Consultation Questions</a></li>
+                                <li role="separator" class="divider"></li> -->
+                                <li><a ui-sref="chgpass">Change Password</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href ng-click="logout()">Logout</a></li>
+                              </ul>
                             </li>
+                            
+                            
                         </ul>
                         <!-- <form class="navbar-form navbar-right">
                             <input type="text" class="form-control" placeholder="Search for your Doctor">
