added more descriptive status for appts

--- a/client/app/provider/dashboard/current_view.html
+++ b/client/app/provider/dashboard/current_view.html
@@ -23,6 +23,7 @@
                     <a href ng-click="gotoApptDetails(appt)">See Patient Details</a>
                     <span> or  </span>
                     <a href ng-click="gotoCRoom(appt)">Go to Consultation Room</a>
+                    <!-- <a href ng-click="gotoAudioRoom(appt)">Go to Audio Room</a> -->
                 </div>
                 <!-- <div class="btn-group btn-group-sm" role="group" aria-label="...">
                     <button type="button" class="btn btn-success">Details</button>
